# metaphor

./: Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
src/: lib.rs
